docker/skins/Wiki7/resources/skins.wiki7.styles/components/Header.less
.wiki7-header {
	--header-icon-size: ~'calc( var( --header-button-size ) / 2 )';
	--header-button-size: ~'calc( var( --header-size ) - var(  --space-xs ) * 2 )';
	--header-direction: row;
	position: fixed;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: @z-index-fixed;
	display: flex;
	flex-direction: var( --header-direction );
	gap: var( --space-xxs );
	padding: ~'var( --space-xs ) max( env( safe-area-inset-right ), var( --space-xs ) ) max( env( safe-area-inset-bottom ), var( --space-xs ) ) max( env( safe-area-inset-left ), var( --space-xs ) )';
	background-color: oklch( 52% 0.195 23 );
	border-top: var( --border-width-base ) solid var( --border-color-base );

	&__item {
		display: flex;
		align-items: center;
	}

	&__button {
		display: grid;
		place-items: center;
		width: var( --header-button-size );
		height: var( --header-button-size );
		border-radius: var( --border-radius-base );
		contain: strict;

		// Pure CSS icons
		&Icon {
			width: var( --header-icon-size );
			height: var( --header-icon-size );
			overflow: hidden; // Sometimes CSS animation can clip
			opacity: var( --opacity-icon-base );
			filter: var( --filter-invert );
			transition: var( --transition-hover );
			transition-property: transform, opacity;
			contain: strict;
		}

		&Icon,
		.wiki7-ui-icon {
			margin: auto;
		}

		&:hover {
			background-color: var( --background-color-button-quiet--hover );

			.wiki7-header__buttonIcon {
				opacity: var( --opacity-icon-base--hover );
			}
		}

		&:active {
			background-color: var( --background-color-button-quiet--active );

			.wiki7-header__buttonIcon {
				opacity: var( --opacity-icon-base--selected );
			}
		}

		// Disable default padding when menu item is used as header button
		.wiki7-menu .mw-list-item & {
			padding: 0;

			.wiki7-ui-icon {
				color: white;
			}


			&:hover {
				.wiki7-ui-icon {
					color: var(--color-progressive);
				}
			}
		}
	}

	&__logo {
		padding: 0 var( --space-xs ) 0 0;
		margin: 0 var( --space-xxs );
		border-right: var( --border-width-base ) solid var( --border-color-base );

		img {
			margin: auto;
		}

		.wiki7-ui-icon {
			position: absolute;
			inset: 0;
		}
	}

	&__inner {
		display: flex;
		flex-grow: 1;
		flex-direction: var( --header-direction );
		gap: var( --space-xxs );
		justify-content: space-between;
		min-width: 0;
		overflow-x: auto;
	}

	&__start,
	&__end {
		display: flex;
		flex-shrink: 0; // let _inner handle the overflow
		flex-direction: var( --header-direction );
		gap: var( --space-xxs );

		// Hide top-level menu header labels
		> .wiki7-menu > .wiki7-menu__heading {
			.mixin-wiki7-screen-reader-only;
		}
	}

	&__start {
		align-items: center;
		min-width: 0;
	}

	.wiki7-dropdown {
		&-summary {
			display: grid;
			place-items: center;
			width: var( --header-button-size );
			height: var( --header-button-size );
			border-radius: var( --border-radius-base );
			contain: strict;

			.wiki7-ui-icon {
				color: white;
			}

			&:hover {
				.wiki7-ui-icon {
					color: var(--color-progressive);
				}
			}
		}
	}
}

// Notifications
#p-notifications {
	ul {
		display: flex;
		flex-direction: var( --header-direction );
		gap: var( --space-xxs );
		align-items: center;
	}

	/*
	// Echo badge styles do not load before init in 1.39
	.wiki7-echo-notification-badge {
		.wiki7-ui-icon + span {
			.mixin-wiki7-screen-reader-only;
		}
	}
	*/
}

.client-nojs {
	// Hide preferences button completely when JS is not supported
	// Since it won't do anything
	.wiki7-preferences {
		display: none;
	}
}

// Reset hover styles if it is a touch device
// This is dumb but hover:hover overrides active states
@media ( hover: none ) {
	.wiki7-header {
		&__button {
			&:hover {
				background-color: transparent;

				.wiki7-header__buttonIcon {
					opacity: var( --opacity-icon-base );
				}
			}
		}
	}
}

@media ( min-width: @min-width-breakpoint-desktop ) {
	.wiki7-header {
		--header-direction: column;
		top: 0;
		right: unset;
		left: 0;
		border-top: 0;
		border-right: var( --border-width-base ) solid var( --border-color-base );

		&__logo {
			padding: 0 0 var( --space-xs ) 0;
			margin: var( --space-xxs ) 0;
			border-right: 0;
			border-bottom: var( --border-width-base ) solid var( --border-color-base );
		}
	}
}

// Dark mode color fixes
@media (prefers-color-scheme: dark) {
	.wiki7-header {
		.wiki7-dropdown-summary  {
			&:hover {
				background-color: var(--background-color-button-quiet-menu--hover);
			}
			&:active {
				background-color: var(--background-color-button-quiet-menu--active);
			}
		}

		.wiki7-dropdown-details[open] > .wiki7-dropdown-summary {
			background-color: var(--background-color-button-quiet-menu--active);
			color: var(--color-progressive);

			&:hover {
				background-color: var(--background-color-button-quiet-menu--hover);
			}
			&:active {
				background-color: var(--background-color-button-quiet-menu--active);
			}

			.wiki7-ui-icon {
				color: var(--color-progressive);
			}
		}

		.wiki7-header__inner {
			.mw-list-item {
				a {
					&:hover {
						background-color: var( --background-color-button-quiet-menu--hover );
					}

					&:active {
						background-color: var( --background-color-button-quiet-menu--active );
					}
				}
			}
		}

		&__button {
			&:hover {
				background-color: var( --background-color-button-quiet-menu--hover );

				.wiki7-header__buttonIcon {
					opacity: var( --opacity-icon-base--hover );
				}
			}

			&:active {
				background-color: var( --background-color-button-quiet-menu--active );

				.wiki7-header__buttonIcon {
					opacity: var( --opacity-icon-base--selected );
				}
			}
		}
	}
}

